20120819
- Ribbon Generator: Show codes for a given line by hovering over line number
  when viewing soft proof.

20120520
- Ribbon Generator: MCA and Wedge lists are now paged for easier access.

20120505
- Ribbon Generator: include Hyphenation engine again.
- Caster Control: Add 25ms of debounce to cycle sensor.

20120225
- Ribbon Generator: fix for problem where in an alphabet change around a 
  word that would break a line causes an extra justifying space to be placed 
  on the line.

20120112
- MCA editor: hopefully emit useful session information when no MCA is provided
- MCA editor: fix for ampersands, quotation marks and other special characters.
- Ribbon Generator: fix some problems with login
- Ribbon Generator: eliminate double encoding of UTF-8 specials, which was 
   causing garage characters on ribbon preview.

20120112
- MCA editor should now properly allow ampersands and similar marks to be
   set as matrix elements.

20111028
- Matrix editor uses a less intrusive popup mechanism that shouldn't run off 
   the page.
- MCA Description is now displayed and may be edited by clicking on the text.
- Available Mats can now be "floated".
- Both MCA Description and Available Mat boxes can be "folded up" to take less
   screen real estate.
- MCA Save button will be disabled until a change is made, making it easier to
   determine if you've done anything to an MCA
- Drag and Drop is now available within the MCA. In addition to dragging mats
   from the available mat list, you can now drag and drop mats between positions
   within the matcase. Dragging a mat (a) onto another mat (b) will delete the
   mat you've dropped onto (b). Blue and Yellow coding in the MCA does not 
   yet follow when you use DnD.
- The Available Mats list will update itself when "floated" or "unfloated".
  
20110827
- made some changes in the Ribbon Generator GUI for consistency: buttons, etc.
- fix an error thrown when creating new MCAs.